# python_be_genai_plgrnd

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
api/: app.py  db.py  dependencies.py  main.py  settings.py
api/articles/: dependencies.py  managers.py  models.py  routers.py  schemas.py
api/auth/: __init__.py  dependencies.py  jwt.py  managers.py  routers.py  schemas.py
api/middlewares/: README.md
api/routers/: README.md  root.py  v1.py
api/users/: dependencies.py  managers.py  models.py  routers.py  schemas.py
migrations/: env.py
migrations/versions/: 0025c3665fd3_add_article_comments.py  15da67aba5b5_user_tables.py  3dd7971885b6_add_likes_table_for_articles_like_.py  3fc3a9b39468_add_indexes_and_unique_constraint_to_.py  4b06bcb2a249_create_articles_table.py  f2ee1e269afc_initial_tables.py
tests/: conftest.py  db_helpers.py
tests/_fixtures/: user_fixtures.py
tests/api/articles/: test_likes.py  test_routers.py
tests/api/auth/: test_dependencies.py  test_managers.py  test_routers.py
tests/api/routers/: test_root.py
tests/api/users/: test_managers.py  test_router.py  test_schemas.py
